# desa

./: .gitignore  .vimprj  .vimprj_doc  Makefile.am  README  README.md  configure.ac
doc/design/: desa_design.xml
doc/design/model/papyrus/: .project  desa_model.notation  desa_model.uml
doc/design/pics/src/: .~lock.desa_change_content.odg#  desa_change_content.odg
doc/requirements/: desa_req.xml
samples/mutag/: Makefile.am  main.cpp  mutag
src/: Makefile.am  connpoint.cpp  connpoint.h  mconnpoint.h  mdes.h  miface.h  state.cpp  state.h  system.cpp  system.h  trans.cpp  trans.h
test/: Makefile.am  ut_base.cpp  ut_conn.cpp  ut_regex.cpp
